Fixing formatting in library
All articles and images seemed to be translated out of place
Not sure why

--- a/static/library.css
+++ b/static/library.css
@@ -21,15 +21,14 @@
     /*margin: 1vh 5vw;*/
     max-width: 100%;
     position: relative;
-    transform: translate(0%, -50%);
-    top: 50%;
-
+    /*transform: translate(0%, -50%);
+    top: 50%;*/
 }
 
 .snippet_text {
     position: relative;
-    top: 50%;
-    transform: translate(0, -50%);
+    /*top: 50%;
+    transform: translate(0, -50%);*/
 }
 
 .buttons {
